@@ -1,3 +1,9 @@
+2003-07-19  Christopher Armstrong  <radix@twistedmatrix.com>
+
+	* twisted/protocols/dns.py, twisted/names: Twisted Names can now
+	return the `authoritative' bit. All of the resolvers in
+	twisted/names/authority.py now set it.
+
 2003-07-17  Christopher Armstrong  <radix@twistedmatrix.com>
 
 	* .: Releasing Twisted 1.0.7alpha2 (Debian packages should be 
